Dark mode fix

--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -2,6 +2,10 @@ body {
   background-color: #FCFBF8 !important;
 }
 
+body[data-theme="dark"] {
+  background-color: #393939 !important;
+}
+
 .App {
   text-align: center;
 }
